expressivity and complexity

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -216,6 +216,7 @@ the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2
 
 \tb{1 simple example in motivation section}
 
+OWL is based on a knowledge representation formalism with different complexity, but is created as a language which can be seen as a constraint language.
 Constraint validation does not appear to be part of the services provided by OWL.  
 This has lead to claims that OWL cannot be used for constraint validation. 
 There are long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}, \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
@@ -272,6 +273,7 @@ Another point would be that if we perform RDF validation with no reasoning, we w
 	%\item explain why specific OWL 2 constructs should not be used for RDF validation
 %\end{itemize}
 
+Reasoning makes sense before actually validating constraints.
 Reasoning, which is the core service provided by OWL,
 and constraint validation are very closely related. 
 \an{maybe we can use also the term 'User-defined Consistency' described in 'see below' as a further 'hook' to establish our approach?}
